--- a/app/code/Nishar/CustomPdp/view/frontend/templates/link.phtml
+++ b/app/code/Nishar/CustomPdp/view/frontend/templates/link.phtml
@@ -1,2 +1,2 @@
 <h1>Home Page link</h1>
-    <a title="View Details" class="view" id="view_id" href="http://local.magento236.com/"><span>Home Page</span></a>
+    <a title="View Details" class="view" id="view_id" href="<?= $block->getBaseUrl();?>"><span>Home Page</span></a>
